# vowpalwabbit-rs-archived

./: .clang-format  Cargo.toml  LICENSE.txt  build.rs  readme.md
.github/workflows/: rust.yml
benches/: benchmarks.rs
binding/: CMakeLists.txt
binding/src/: binding.cc  binding.h
src/: error.rs  example.rs  hash.rs  lib.rs  options.rs  parser.rs  vw.pest
