[package]
name = "vowpalwabbit"
version = "8.7.0"
authors = ["Jack Gerrits <jack@jackgerrits.com>"]
edition = "2018"
repository = "https://github.com/jackgerrits/vowpalwabbit-rs"
license = "MIT"
description = "Rust types, and CLI for VowpalWabbit"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
byteorder = "1.3.2"
vowpalwabbit-sys = "8.8.0+post3"
pest = "2.1.2"
pest_derive = "2.1.0"

[dev-dependencies]
bencher = "0.1.5"
