[package]
name = "vowpalwabbit"
version = "8.8.1"
authors = ["Jack Gerrits <jack@jackgerrits.com>"]
edition = "2018"
repository = "https://github.com/jackgerrits/vowpalwabbit-rs"
license = "MIT"
description = "Rust types, and CLI for VowpalWabbit"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
byteorder = "1.3.2"
vowpalwabbit-sys = { git = "https://github.com/jackgerrits/vowpalwabbit-sys-rs", branch = "new_c_interface" }
pest = "2.1.2"
pest_derive = "2.1.0"

[dev-dependencies]
bencher = "0.1.5"
