[package]
name = "vowpalwabbit"
version = "0.1.0"
authors = ["Jack Gerrits <jack@jackgerrits.com>"]
edition = "2021"
repository = "https://github.com/jackgerrits/vowpalwabbit-rs"
license = "MIT"
description = "Bindings for Vowpal Wabbit library"
readme = "readme.md"
keywords = ["vowpal-wabbit", "machine-learning"]
exclude = [
    "*.exe",
    "*.natvis",
    "*.vcxproj",
    "*.vcxproj.filters",
    "*.model",
    "*.pred",
    "*.stderr",
    "*.stdout",
    "*.json",
    "binding/external/vowpal_wabbit/utl/**",
    "binding/external/vowpal_wabbit/python/**",
    "binding/external/vowpal_wabbit/logo_assets/**",
    "binding/external/vowpal_wabbit/java/**",
    "binding/external/vowpal_wabbit/demo/**",
    "binding/external/vowpal_wabbit/R/**",
    "binding/external/vowpal_wabbit/ext_libs/rapidjson/thirdparty/*",
    "**/test/**",
    "!**/zlib/test/**",
    "**/doc/**",
    "*.png",
    "*.svg",
    "*.rst",
    "*.gz",
    "*.md",
]

[dependencies]
byteorder = "1.3.2"
thiserror = "1.0.30"

[build-dependencies]
bindgen = "0.59.0"
cmake = "0.1.48"
